# docs/swagger.json
@@ -3020,6 +3020,10 @@
                 "plan"
             ],
             "properties": {
+                "access_code": {
+                    "type": "string",
+                    "example": "convite-2026"
+                },
                 "email": {
                     "type": "string",
                     "example": "joao@email.com"
